--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
   },
   "require-dev": {
     "fakerphp/faker": "^1.9.1",
+    "laravel/breeze": "^2.3",
     "laravel/pint": "^1.13",
     "laravel/sail": "^1.28",
     "mockery/mockery": "^1.6.7",
