--- a/.github/workflows/main_traveler-memory-map.yml
+++ b/.github/workflows/main_traveler-memory-map.yml
@@ -74,5 +74,5 @@ jobs:
         with:
           app-name: 'traveler-memory-map'
           slot-name: 'Production'
-          package: .
+          package: release.zip
           
